# automatic-contract-and-integration-testing

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: database.cpp.89824D84B5CFB5B7.idx  database.hpp.D9EAF6056C204263.idx  database_contract.hpp.9B7F4C0515D96247.idx  order_contract.hpp.ED9983871A6AF72F.idx  order_contract_test.cpp.251057E392D2A66D.idx  order_service.cpp.558F4870058ED0A5.idx  order_service.hpp.BB5391AC32672E5C.idx  order_service_test.cpp.F3CCE8CE611988C1.idx  user_contract.hpp.CFBD157D50918C47.idx  user_contract_test.cpp.DDB5DFF0EE0B71F0.idx  user_order_integration_test.cpp.5DE79C95F7554746.idx  user_service.cpp.B0C91D14479D86E0.idx  user_service.hpp.7BD6B19EA3F87C2E.idx  user_service_test.cpp.09FFA7B8FC81896C.idx
.github/workflows/: ci.yml
include/contracts/: database_contract.hpp  order_contract.hpp  user_contract.hpp
include/services/: database.hpp  order_service.hpp  user_service.hpp
src/: database.cpp  order_service.cpp  user_service.cpp
tests/contract/: order_contract_test.cpp  user_contract_test.cpp
tests/integration/: user_order_integration_test.cpp
tests/unit/: order_service_test.cpp  user_service_test.cpp
